--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-6.87MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-153.1KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇦 加拿大-292.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-1.80MB/s(Youtube:不良林), server: jp.v2yyds.cc, port: 35212, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: jp.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-282.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇯🇵 日本-899.8KB/s(Youtube:不良林), server: 5.183.176.93, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-646.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇦 加拿大-607.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
