--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.80MB/s(Youtube:不良林), server: jp.v2yyds.cc, port: 35212, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: jp.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-282.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-447.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.39MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-862.7KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇯🇵 日本-899.8KB/s(Youtube:不良林), server: 5.183.176.93, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-646.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-607.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-551.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇦 加拿大-628.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-449.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-920.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-646.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-607.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
 rules:
