--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-447.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.39MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-862.7KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-1.22MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇦 加拿大-150.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-749.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇯🇵 日本-899.8KB/s(Youtube:不良林), server: 5.183.176.93, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇦 加拿大-551.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-628.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-874.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-449.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-150.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-749.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-150.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-749.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-150.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-749.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-150.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-749.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-150.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-749.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-150.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-749.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-862.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-150.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-749.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-899.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-551.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-628.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-449.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
