--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇦 加拿大-952.3KB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-1.24MB/s(Youtube:不良林), server: 89.31.126.31, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-183.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-699.5KB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-1.38MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-177.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇦 加拿大-1.07MB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-702.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-606.8KB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇦 加拿大-874.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.28MB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-699.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-699.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-699.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-699.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-699.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-699.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-952.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-699.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-606.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1002.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.28MB/s(Youtube:不良林)
